freeciv-web/src/main/webapp/css/civclient.css
/*
    FreecivWorld.net - Freeciv 3D.
 */
body {
  padding-top: 60px;
  padding-bottom: 20px;
}

/*
 * Delimits an area where to put content.
 */
.panel-freeciv {
  background-color: rgba(243, 236, 209, 0.5);
  border-bottom: 1px solid #D3B86F;
  border-radius: 3px;
  margin-top: 1%;
  padding: 1%;
}
.panel-freeciv h1, .panel-freeciv h2, .panel-freeciv h3,
.panel-freeciv h4, .panel-freeciv h5, .panel-freeciv h6 {
  margin-top: 0px;
}

/*
 * Sometimes we need some additional space between rows.
 */
.top-buffer-3 { margin-top: 3%; }
.top-buffer-2 { margin-top: 2%; }
.top-buffer-1 { margin-top: 1%; }
/*
 * The bootstrap theme we use adds some transparency, this ensure it is removed.
 */
.navbar-inverse {
  background-image: none;
}
/*
 * Ensure that the logo fits within the navbar.
 */
.navbar-brand {
  float: left;
  height: 50px;
  padding: 4px 15px;
  font-size: 18px;
  line-height: 20px;
}
.ongoing-games-number {
  margin-left: 5px;
  background:#BE602D;
}
.nav {
  font-size: 16px;
}
@media (min-width: 1024px) {
  .container {
    width: 1350px;
  }
}


body
{
  margin: 0px;
  background: #000000;
  overflow: hidden;
  width: 100%;
}

/*button {
  margin: .2em .2em .2em 0; 
  cursor: pointer; 
  padding: .2em .6em .3em .6em; 
  line-height: 1.4em; 
  width:auto; 
  overflow:visible; 
}*/

.ui-tabs .ui-tabs-panel {
  border-width:0;
  display:block;
  padding:0px;
}

#mapcanvas {
  background: black;
}

#globecanvas {
  background: black;
}

#freeciv_logo {
  float:left; 
  background: url(/images/freeciv-web-logo.png) no-repeat center;
  background-size: contain;
  width: 169px;
  height: 35px; 
  margin-right: 10px;
  margin-bottom: 10px;
  border-radius: 6px;
  transition: all 0.3s ease;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
}

#freeciv_logo:hover {
  transform: scale(1.05);
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
}

#game_logo {
  width: 100%;
  height: 50px;
  background-color: #aaaaff;
}

#freeciv_custom_scrollbar_div {
  height: 95%;
  overflow: auto;
}

#game_message_area {
  padding-top: 12px;
  padding-left: 0px;
  box-sizing: border-box;
  border: 1px solid #111111;
  color: white;
  list-style-type: none;
  margin: 0px;
}

#game_chat_box {
  width: 100%;
  display: flex;
}

#chat_direction {
  width: 29px;
  height: 20px;
  display: none;
}

#game_text_input {
  flex: 1 1 auto;
  height: 18px;
  min-width: 0;
  margin: 0 0.3em;
  border: 1px solid #555555;
  color: #ffffff;
  background-color: rgba(0.1, 0.1, 0.1, 1.0);
  margin-top: -5px;
  font-size: 16px;
}


#game_unit_info {
  float: left;
  width: 100%;
  overflow: hidden;
  display: flex;
  flex-wrap: wrap;
  gap: 4px;  /* Gap between all flex children (info panel, unit icons, etc.) */
  padding: 4px;
}

#unit_text_details {
  float:left;
  width: 135px;

}

#end_game_turn_panel {
  float: right;
  width: 120px;
}



.order_button {
  overflow: hidden;
  padding-right: 12px;
  display: inline-block;
  height: 30px;
  width: 30px;
}

#turn_done_button_div {
  position: absolute;
  padding: 8px;
  right: 0;
  top: 0;
}

#zoom_map_image {
  padding-left: 4px;
  padding-right: 4px;
  cursor:pointer;
  height: 30px;
  margin-top: -4px;
}


#turn_done_button {

}

.main_menu_buttons {
  padding:10px
}

#city_dialog {
  font-size: 90%;
}

#city_dialog_info {
  float: left;
  padding: 10px;

}

#city_button_pane {
  margin: 20px;
  float: left;
}


.city_panel {
  float: left; 
  padding-right: 30px;
}

#city_improvements_panel {

}

#city_right_panel {
  float: right; 
  width: 55%;
  background: url("/images/bg.jpg") repeat scroll 0 0 #222222;
  height: 533px;
}


#freeciv_manual {  
  color: #ffffff;
  padding: 10px;
  
}

.manual-tab {
  background: #2e2f35;
  padding: 30px;
  overflow: auto;
}

.helptext {
  white-space: pre-wrap;
  font-size: 85%;
}

#manual_non_helptext_facts {
  -moz-column-width: 20em;
  -webkit-column-width: 20em;
  column-width: 20em;
  -moz-column-count: 2;
  -webkit-column-count: 2;
  column-count: 2;
}

#game_unit_orders_default {
  bottom: 45px;
  min-width: 300px;
  height: 40px;
  position: absolute;
  text-align: center;
  width: 100%;
}

#city_viewport {
  overflow: auto;
}

.ui-dialog {
  border: 1px #444444 solid;
  max-height: 100%;
  // overflow: auto;
}

#dialog {
  max-height: 400px;
}

/* Research dialog. */

#technologies {
  clear: left;
  position: relative; 
  overflow: auto; 
  width: 100%;
  background-image: url('/images/bg.jpg');
}

#tech_info_box {
  float: left; 
  border: 1px solid rgb(153, 153, 153); 
  width: 100%;
  min-height: 40px; 
  padding: 4px; 
  margin: 2px; 
  margin-left: 0px; 
  background: url("/images/bg-dark.jpg") repeat scroll 0 0 ; 
  color: white;
}

#tech_goal_box {
  float: left;
  font-weight: bold;
}

#tech_progress_box {
  float: left; 
  padding-left: 80px; 
  width: 520px;
}

#progress_bg {
  float: left;
  background-color: #bbbbbb; 
  width: 100%;
  border: 1px solid #ffffff;
  position: relative;
}

#progress_fg {
  float: left; 
  width: 60%; 
  background-color: #5582c2;
}

#tech_progress_text {
  position: absolute;
  left: 0;
}

#tech_results {
  float: left; 
  padding-left: 20px;
}


#nations {
  overflow: auto;
}

#city_name_req {
  width: 100%;
}

#civ_dialog {
  padding: 20px;
  margin: 20px;
  height: auto;
  text-align: center;
}

/* Overrides to jquery-ui-1.8.9.custom.css */ 

.ui-widget-overlay {
  background: none repeat scroll 0 0 #000000;
  opacity: 0.75;
}

.ui-widget-content {
  background: url("/images/bg.jpg") repeat scroll 50% 50%;

}


#game_status_panel_bar {
  position: absolute;
  color: #ffffff;
  height: 23px;
  text-align: center;
  top: 50px;
  overflow: hidden;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
  font-size: 70%;
}

#game_status_panel_top {
  float: right;
  color: #ffffff;
  height: 30px;
  text-align: center;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
  padding-right: 150px;
  padding-top: 5px;
}
/* ... */

